--- a/i18n/locales/id.json
+++ b/i18n/locales/id.json
@@ -7,41 +7,44 @@
     "skills": {
       "title": "Keahlian",
       "sub_title": "Keahlian profesional saya."
-    },
-    "bento": {
-      "title": "Bagian Unggulan",
-      "sub_title": "Jelajahi semua yang telah saya buat, kontribusikan, dan capai."
     }
   },
   "ProfilPage": {
     "title": "Profil",
-    "description": "Perkenalan singkat tentang siapa saya.",
-    "resume": {
-      "paragraf_1": "Halo! Terima kasih telah mengunjungi situs pribadi saya. Saya Satria Bahari, seorang mahasiswa Sistem Informasi di Universitas Jambi. Saya adalah seorang Fullstack Developer dengan minat besar dalam membangun produk perangkat lunak yang berdampak. Stack teknologi saya meliputi teknologi frontend modern seperti Next.js, TypeScript, dan Tailwind CSS, serta pengembangan backend menggunakan Golang. Untuk aplikasi mobile, saya mengembangkan aplikasi Android native menggunakan Kotlin.",
+    "description": "Biografi Singkat",
+    "about": {
+      "paragraf_1": "Hola! Saya adalah Frontend Web Developer yang berfokus pada pembangunan antarmuka modern yang scalable, maintainable, dan berorientasi produk. Berpengalaman menggunakan Nuxt.js (termasuk Nuxt 4), Astro.js, dan ekosistem Vue, saya terbiasa merancang arsitektur frontend yang rapi, data-driven, serta nyaman digunakan oleh pengguna.",
 
-      "paragraf_2": "Saya menikmati menciptakan solusi yang ramah pengguna dan memiliki performa tinggi. Baik saat membangun antarmuka yang intuitif maupun merancang layanan backend, saya selalu berusaha membawa efisiensi dan kejelasan pada setiap lapisan aplikasi. Saya pembelajar cepat yang tumbuh dalam lingkungan dinamis dan senang menyelesaikan masalah kompleks secara kolaboratif.",
+      "paragraf_2": "Saya tidak hanya mengimplementasikan fitur, tetapi juga memikirkan alur data, struktur komponen, performa, dan pengalaman pengguna secara menyeluruh. Saya cukup detail dalam hal UI/UX, mulai dari dark mode berbasis sistem, motion yang terasa natural, hingga konsistensi desain, tanpa mengorbankan kualitas dan keterbacaan kode.",
 
-      "paragraf_3": "Saya percaya bahwa komunikasi yang baik dan sinergi tim adalah kunci kesuksesan dalam pengembangan perangkat lunak. Pengalaman saya telah membentuk kemampuan teknis dan analitis saya, serta kualitas kepemimpinan saya. Saya selalu bersemangat untuk bekerja dalam tim, belajar dari orang lain, dan berkontribusi pada proyek yang berdampak.",
+      "paragraf_3": "Berpengalaman menangani kebutuhan sistem nyata dan konteks bisnis, saya menikmati peran sebagai problem solver yang menjembatani kebutuhan produk, desain, dan solusi teknis. Ke depan, saya siap berkembang ke peran Senior Frontend Engineer.",
 
       "paragraf_4": "Salam hangat,"
     },
     "career": {
       "title": "Karier",
-      "sub_title": "Perjalanan profesional saya."
+      "sub_title": "Pengalaman Profesional saya.",
+      "show_detail": "Lihat detail",
+      "hide_detail": "Sembunyikan",
+      "sections": {
+        "responsibilities": "Tanggung Jawab",
+        "lessons_learned": "Pelajaran yang Dipelajari",
+        "impact": "Dampak"
+      }
+    },
+    "duration": {
+      "year": "Tahun",
+      "years": "Tahun",
+      "month": "Bulan",
+      "months": "Bulan",
+      "present": "Sekarang"
     },
     "education": {
       "title": "Pendidikan",
-      "sub_title": "Perjalanan pendidikan saya."
+      "sub_title": "Pendidikan Terakhir."
     },
     "resume_download_button": "Unduh CV",
     "portfolio_download_button": "Unduh Portofolio"
-  },
-  "AchievementsPage": {
-    "title": "Pencapaian",
-    "description": "Kumpulan sertifikat dan badge yang saya peroleh sepanjang perjalanan profesional dan akademik.",
-    "error": "Terjadi kesalahan pada server.",
-    "no_data": "Data tidak tersedia.",
-    "show_credential": "Lihat Kredensial"
   },
   "ProjectsPage": {
     "title": "Proyek",
@@ -99,23 +102,6 @@
       "languages": "Bahasa"
     }
   },
-  "ChatRoomPage": {
-    "title": "Ruang Obrolan",
-    "description": "Silakan bagikan pendapat, saran, pertanyaan, atau apa pun di sini!",
-    "placeholder": "Ketik pesan Anda...",
-    "sign_in": {
-      "title": "Silakan masuk untuk bergabung dalam percakapan. Tenang, data Anda aman bersama kami.",
-      "label": "Masuk dengan",
-      "signed_label": "Masuk sebagai",
-      "sign_out_label": "Keluar"
-    },
-    "widget": {
-      "title": "Ruang Obrolan",
-      "tooltip_title": "Buka Ruang Obrolan",
-      "tooltip_minimize": "Minimalkan",
-      "tooltip_signout": "Keluar"
-    }
-  },
   "ContactPage": {
     "title": "Kontak",
     "description": "Mari kita terhubung",
@@ -149,10 +135,6 @@
       "input_message": "Pesan",
       "button": "Kirim Email"
     }
-  },
-  "SmartTalkPage": {
-    "title": "Smart Talk",
-    "description": "Ruang berbasis AI untuk percakapan alami, penuh wawasan, dan eksplorasi ide."
   },
   "Footer": {
     "title" : "Dikembangkan dengan ❤ oleh Bayu Wijanarko.",
