--- a/i18n/locales/id.json
+++ b/i18n/locales/id.json
@@ -1,14 +1,4 @@
 {
-  "HomePage": {
-    "intro": "Hai, saya Satria Bahari",
-    "location": "Berdomisili di Jambi, Indonesia 🇮🇩",
-    "location_type": "Tatap Muka",
-    "resume": "Pengembang Fullstack yang berpengalaman dan penuh semangat, berspesialisasi dalam membangun solusi digital yang skalabel dan efisien. Di sisi frontend, saya menggunakan Next.js, TypeScript, dan Tailwind CSS untuk membuat antarmuka pengguna yang responsif dan mudah diakses. Di sisi backend, saya mengembangkan layanan yang tangguh menggunakan Golang, dan untuk mobile, saya membangun aplikasi Android native menggunakan Kotlin. Saya adalah engineer yang kolaboratif dan berorientasi pada detail, berkomitmen untuk menghadirkan aplikasi lintas platform yang terstruktur dengan baik dan berkinerja tinggi.",
-    "skills": {
-      "title": "Keahlian",
-      "sub_title": "Keahlian profesional saya."
-    }
-  },
   "ProfilPage": {
     "title": "Profil",
     "description": "Biografi Singkat",
@@ -80,7 +70,7 @@
     },
     "github": {
       "title": "Kontribusi GitHub",
-      "sub_title": "Aktivitas GitHub saya selama satu tahun terakhir.",
+      "sub_title": "Aktivitas GitHub selama satu tahun terakhir.",
       "title_total_contribution": "Total",
       "title_total_this_week_contribution": "Minggu ini",
       "title_best_contribution": "Terbaik",
